--- a/home.html
+++ b/home.html
@@ -10,7 +10,7 @@
 <br> a truly out of this world experience!</p>
 </div>
 
-<div id="explore" class="nav-li round">EXPLORE</div>
+<div id="explore" class="nav-li round" onclick="exploreClick()">EXPLORE</div>
 
 
 </div>
